# schedule_app

./: .coverage  .gitignore  README.md  database.py  language.py  main.py  models.py  notification.py  pyproject.toml  settings.py  test.csv  test.json  utils.py
.github/workflows/: python-tests.yml
data/: schedule.db
locales/: en.json  pl.json  ukr.json
src/: database.py  language.py  models.py  notification.py  settings.py  signals.py  utils.py
src/locales/: en.json  pl.json  ukr.json
src/styles/: dark_theme.qss  light_theme.qss
src/ui/: export_dialog.py  import_dialog.py  lesson_dialog.py  main_window.py  schedule_view.py  settings_dialog.py  time_picker_dialog.py
styles/: dark_theme.qss  light_theme.qss
ui/: export_dialog.py  import_dialog.py  lesson_dialog.py  main_window.py  schedule_view.py  settings_dialog.py  time_picker_dialog.py
